# bazel_pkg_tar

./: README.md  WORKSPACE
src/: BUILD.bazel
src/cpp/: BUILD.bazel  main.cpp
src/py/: BUILD.bazel  foo.py
