load("@pip_requirements//:requirements.bzl", "requirement")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

py_binary(
    name = "foo",
    srcs = [
        "foo.py",
    ],
    main = "foo.py",
    deps = [
        requirement("numpy"),
    ],
)

pkg_tar(
    name = "foo_tar",
    srcs = [
        ":foo",
    ],
    include_runfiles = True,
    package_dir = "/opt",
    strip_prefix = ".",
)
