load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

filegroup(
    name = "targets",
    srcs = [
        "//src/cpp:foo_cpp",
        "//src/py:foo_py",
    ],
)

pkg_tar(
    name = "foo_tar",
    srcs = [
        ":targets",
    ],
    # requires >= bazel 0.15.0
    include_runfiles = True,
    package_dir = "/opt",
    # without the strip_prefix=".", the directory order is not preserved.
    # see https://groups.google.com/forum/#!topic/bazel-discuss/LHjopuUvZks for more info
    strip_prefix = ".",
)
